--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "joi": "^17.13.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.0",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
