--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^16.4.5",
     "firebase-admin": "^13.0.2",
     "joi": "^17.13.3",
+    "luxon": "^3.5.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.0",
     "nodemailer": "^6.9.16",
