--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "migration:revert": "npm run typeorm -- migration:revert"
   },
   "dependencies": {
+    "@google-cloud/vision": "^5.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -40,12 +41,15 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "canvas": "^3.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "face-api.js": "^0.22.2",
     "firebase-admin": "^13.0.2",
     "joi": "^17.13.3",
     "luxon": "^3.5.0",
+    "multer": "^1.4.5-lts.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.0",
     "nodemailer": "^6.9.16",
