--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.15",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "canvas": "^3.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "face-api.js": "^0.22.2",
     "firebase-admin": "^13.0.2",
     "joi": "^17.13.3",
     "luxon": "^3.5.0",
