--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "firebase-admin": "^13.0.2",
     "joi": "^17.13.3",
     "luxon": "^3.5.0",
