--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "csv-stringify": "^6.5.2",
     "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "firebase-admin": "^13.0.2",
